Remove unnecessary entries in pom.xml